--- a/roles/mail-server-install/templates/virtual_mailbox_maps.cf.j2
+++ b/roles/mail-server-install/templates/virtual_mailbox_maps.cf.j2
@@ -1,11 +1,11 @@
 version = 3
-server_host = ldap://{{ ldap-server }}
-search_base = {{ ldap-search-base }}
+server_host = ldap://{{ ldap_server }}
+search_base = {{ ldap_search_base }}
 query_filter = (&(objectClass=inetorgperson)(mail=%s))
 result_filter = %s
 result_attribute = mail
 special_result_attribute = member
 scope = sub
 bind = yes
-bind_dn = uid={{ ldap-dn-user }},{{ ldap-search-base }}
-bind_pw = {{ ldap-dn-pass }}
+bind_dn = uid={{ ldap_dn_user }},{{ ldap_search_base }}
+bind_pw = {{ ldap_dn_pass }}
