--- a/roles/mail-server-install/templates/main.cf.j2
+++ b/roles/mail-server-install/templates/main.cf.j2
@@ -46,8 +46,8 @@ smtpd_tls_loglevel = 1
 smtpd_tls_received_header = yes
 smtpd_tls_session_cache_timeout = 3600s
 smtp_tls_session_cache_database = btree:$data_directory/smtp_tls_session_cache
-smtpd_tls_key_file = /ssl/key.pem
-smtpd_tls_cert_file = /ssl/fullchain.pem
+smtpd_tls_key_file = {{ cert_folder }}/key.pem
+smtpd_tls_cert_file = {{ cert_folder }}/fullchain.pem
 tls_random_source = dev:/dev/urandom
 smtpd_tls_mandatory_ciphers = low
 smtpd_tls_ciphers = low
