--- a/roles/mail-server-install/templates/config.inc.php.j2
+++ b/roles/mail-server-install/templates/config.inc.php.j2
@@ -2,6 +2,6 @@
 $config['db_dsnw'] = 'sqlite:////{{ roundcube_db_path }}/sqlite.db?mode=0646';
 $config['default_host'] = 'localhost';
 $config['support_url'] = '';
-$config['des_key'] = '{{ des_key }}';
+$config['des_key'] = '{{ des_key.stdout }}';
 $config['product_name'] = '{{ domain }} webmail';
 $config['plugins'] = [];
