--- a/roles/mail-server-install/templates/config.inc.php.j2
+++ b/roles/mail-server-install/templates/config.inc.php.j2
@@ -4,4 +4,4 @@ $config['default_host'] = 'localhost';
 $config['support_url'] = '';
 $config['des_key'] = '{{ des_key.stdout }}';
 $config['product_name'] = '{{ domain }} webmail';
-$config['plugins'] = [];
+$config['plugins'] = ['acl', 'managesieve', 'userinfo'];
