added some plugins

--- a/roles/mail-server-install/templates/config.inc.php.j2
+++ b/roles/mail-server-install/templates/config.inc.php.j2
@@ -4,6 +4,6 @@ $config['default_host'] = 'localhost';
 $config['smtp_port'] = 25;
 $config['support_url'] = '';
 $config['des_key'] = '{{ des_key.stdout }}';
-$config['plugins'] = ['acl', 'managesieve', 'userinfo', 'newmail_notifier'];
+$config['plugins'] = ['acl', 'managesieve', 'userinfo', 'newmail_notifier', 'archive', 'zipdownload'];
 $config['language'] = 'ru_RU';
 $config['product_name'] = '{{ domain }} webmail';
