--- a/roles/mail-server-install/templates/dovecot.conf.j2
+++ b/roles/mail-server-install/templates/dovecot.conf.j2
@@ -196,7 +196,7 @@ namespace {
  special_use = \Junk
  }
  mailbox Archive {
- auto = no
+ auto = subscribe
  special_use = \Archive
  }
  mailbox Archives {
