--- a/roles/mail-server-install/templates/main.cf.j2
+++ b/roles/mail-server-install/templates/main.cf.j2
@@ -58,6 +58,7 @@ smtp_tls_mandatory_ciphers = low
 smtp_tls_protocols = !SSLv2,!SSLv3
 smtp_tls_policy_maps = hash:/etc/postfix/tls_policy_maps
 smtp_tls_note_starttls_offer = yes
+smtp_helo_name = $mydomain
 
 meta_directory = /etc/postfix
 shlib_directory = /usr/lib64/postfix
